Add subject search logic

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyVirtualAgent",
+  "name": "PolyVirtualAgent",
   "version": "0.5.1",
   "description": "Chatbot to demo Watson Conversation Service + Watson Discovery Service design pattern.",
   "repository": {
